# VanillaWindowsTools

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile  README.md  examples.rest
.github/workflows/: release-tag.yml  release.yml  tests.yml
examples/: vanilla_index.rs
src/: error.rs  index.rs  lib.rs  tokenizer.rs  vanilla.rs
src/service/: hash.rs  mod.rs  path.rs
tests/: test_structs.rs
