[package]
name = "winvanilla"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
log = "0.4"
fern = "0.5"
chrono = "0.4"
regex = "1.5"
lazy_static = "1.4.0"
serde_json = "1.0"
walkdir = "2.3.2"
csv = "1.1.6"
encoding = "0.2.33"
rpmalloc = "0.2.0"
tantivy = "0.16.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rocket]
version = "0.5.0-rc.1"
optional = true
features = ["json"]


[features]
service = ["rocket"]
default = ["service"]


[[bin]]
name = "vanillawinrefs_to_jsonl"

[[bin]]
name = "vanilla_service"
